Fix overflow of posts and change dash header to constant
I found out that even though grid is layout oriented, when you nest
grids, you can run into some annoying issues with overflowing content
that leads to your fr's changing upon window resizing. This caused
all my elements to change drastically and resulted in a hugely zoomed
in layout. I fixed this by giving my posts layout (the grid with repeat)
a set max height of 300px, that way it will still be able to stretch,
but wont mess up my whole layout when doing so.

--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@
     padding: 0;
 }
 
-html {
-    height: 100vh;
-}
+
 
 ul,
 li {
@@ -26,7 +24,7 @@ ion-icon {
 .container {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 5fr 10fr;
+    grid-template-rows: 1fr 8fr;
 }
 
 .header {
@@ -97,7 +95,7 @@ ion-icon {
 
 .dashboard {
     box-sizing: border-box;
-    grid-area: 1 / 1 / span all/ 2;
+    grid-area: 1 / 1 / 3 / 2;
     background-color: rgba(0, 0, 0, .9);
     font-size: 32px;
     box-shadow: 5px 0 5px -6px #888;    
@@ -130,7 +128,7 @@ ion-icon {
     border-bottom: 1px solid white;
 }
 
-.dashboard ul li:hover {
+.dashboard ul li p:hover {
     color: gray;
     cursor: pointer;
     transition: all .5 ease;
@@ -140,8 +138,7 @@ ion-icon {
     grid-area: 2 / 2 / 3 / 4;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 4fr 1fr 4fr;
-    resize: both;
+    grid-template-rows: 1fr 6fr 1fr 6fr;
     color: black;
     padding: 5px;
 }
@@ -165,10 +162,11 @@ ion-icon {
 
 .posts {
     background-color: whitesmoke;
-    grid-row: 2 / 5;
+    grid-row: 2 / span all;
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    max-height: 500px;
     overflow: scroll;
     padding: 10px;
 }
@@ -196,7 +194,7 @@ ion-icon {
 }
 
 .modchat {
-    grid-row: 2 / 3;
+    grid-area: 3 / 2 / 4 / 3;
     color: black;
     background-color: white;
 }
